// The definition of the communication service between mocking service and manager

syntax = "proto3";

option go_package = "github.com/kubeshop/kusk-gateway/internal/mocking/management";

package grpc;

// ConfigManager service continuously streams the snapshots of Mocking config to the client.
service ConfigManager {
  rpc GetMockSnapshot (ClientParams) returns (stream Snapshot) {}
}

// The request message provides the node name and fleet ID.
message ClientParams {
  // Client node name
  string name = 1;
  string fleetID = 2;
}

// The response message containing the greetings
message Snapshot {
  string snapshotID = 1;
  string mockMap = 2;
}
